<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWindowBack"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_connect_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/common_device_connect"
        android:textColor="@color/textColorDark"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/item_include_connect"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/re_connect"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:text="@string/common_re_connect"
            android:textColor="?attr/colorAccent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/re_connect"
            android:text="@string/common_cancel"
            android:textColor="?attr/colorAccent" />

    </RelativeLayout>

</LinearLayout>