<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="设备信息">
                </TextView>

                <TextView
                    android:id="@+id/tv_device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp">
                </TextView>

                <TextView
                    android:id="@+id/tv_device_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_device_firmware"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp">
                    </TextView>

                    <com.demo.epaper.view.SignalView
                        android:id="@+id/signal_view"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="20dp">
                    </com.demo.epaper.view.SignalView>

                    <TextView
                        android:id="@+id/tv_device_rssi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp">
                    </TextView>

                    <com.demo.epaper.view.BatteryView
                        android:id="@+id/battery_view"
                        android:layout_width="12dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="20dp">
                    </com.demo.epaper.view.BatteryView>

                    <TextView
                        android:id="@+id/tv_device_vbat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="无数据"
                        android:textSize="15sp">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_update_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/title_binary_update"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </TextView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_update_file"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@mipmap/ic_file"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_update_title">
                </androidx.appcompat.widget.AppCompatImageView>

                <TextView
                    android:id="@+id/tv_update_file"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:breakStrategy="simple"
                    android:ellipsize="end"
                    android:text="@string/title_file_path_default"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_update_file"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="@+id/iv_update_file"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_update_file">
                </TextView>

                <TextView
                    android:id="@+id/tv_binary_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_update_file"
                    android:layout_marginTop="15dp"
                    android:textSize="15sp">
                </TextView>

                <Button
                    android:id="@+id/btn_update_reboot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_select"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/title_reboot_epaper">
                </Button>

                <Button
                    android:id="@+id/btn_select"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_select_binary"
                    app:layout_constraintStart_toEndOf="@+id/btn_update_reboot"
                    app:layout_constraintEnd_toStartOf="@+id/btn_update"
                    app:layout_constraintBottom_toBottomOf="parent">
                </Button>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_start_upgrade"
                    app:layout_constraintStart_toEndOf="@+id/btn_select"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_ble_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@android:color/black"
                    android:text="@string/title_ble_name"
                    android:textSize="16sp">
                </TextView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_ble_name"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@mipmap/ic_blueteeth"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ble_name">
                </androidx.appcompat.widget.AppCompatImageView>

                <TextView
                    android:id="@+id/tv_name_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_ble_name"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_ble_name"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/iv_ble_name">
                </TextView>

                <EditText
                    android:id="@+id/ed_ble_name"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_ble_name"
                    app:layout_constraintEnd_toStartOf="@+id/btn_ble_name"
                    android:layout_marginTop="5dp"
                    android:hint="使用默认名称请留空"
                    android:inputType="text"
                    android:background="@mipmap/bg_edit_text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="16sp"
                    android:imeOptions="actionDone"/>

                <Button
                    android:id="@+id/btn_ble_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/ed_ble_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="保存">

                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_interval"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/tv_beacon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@android:color/black"
                    android:text="@string/title_beacon"
                    android:textSize="16sp">
                </TextView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_beacon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@mipmap/ic_beacon"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_beacon">
                </androidx.appcompat.widget.AppCompatImageView>

                <TextView
                    android:id="@+id/tv_beacon_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_title_beacon"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/iv_beacon"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/iv_beacon">
                </TextView>

                <com.demo.epaper.view.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/seek_beacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_beacon"
                    app:dsb_indicatorFormatter="%ds"
                    app:dsb_max="10"
                    app:dsb_min="1"
                    app:dsb_value="3">
                </com.demo.epaper.view.discreteseekbar.DiscreteSeekBar>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layout_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/bg_app_version">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@android:color/black"
                android:text="关于软件"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app_version"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_app_build"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>