<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_update"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_message_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_update_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_binary_update"
        android:textColor="@android:color/black"
        android:textSize="18sp">
    </TextView>

    <View
        android:id="@+id/view_split"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_title"
        android:background="@android:color/darker_gray">
    </View>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_update"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@mipmap/ic_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_split"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">
    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/tv_update_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/title_update_notice"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/iv_update"
        app:layout_constraintTop_toBottomOf="@+id/view_split"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">
    </TextView>

    <TextView
        android:id="@+id/tv_update_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/iv_update"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_notice"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp">
    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@+id/iv_update"
        app:layout_constraintBottom_toTopOf="@+id/tv_update_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tv_update_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/common_cancel"
        android:layout_marginEnd="40dp"
        android:textColor="#ff1e90ff"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:textSize="16sp"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>